WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283755
Fix AudioMediaStreamTrackRendererUnit::singleton never destroyed construction
https://bugs.webkit.org/show_bug.cgi?id=283755
Summary
Fix AudioMediaStreamTrackRendererUnit::singleton never destroyed construction
youenn fablet
Reported
2024-11-27 06:29:06 PST
Fix AudioMediaStreamTrackRendererUnit::singleton never destroyed construction
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-27 06:29:23 PST
<
rdar://problem/140622251
>
EWS
Comment 2
2024-12-01 22:43:30 PST
Committed
287207@main
(31c0eb9a96a6): <
https://commits.webkit.org/287207@main
> Reviewed commits have been landed. Closing PR #37196 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug