Fix AudioMediaStreamTrackRendererUnit::singleton never destroyed construction rdar://140622251 https://bugs.webkit.org/show_bug.cgi?id=283755

Reviewed by Jean-Yves Avenard.

We should call construct before accessing the LazyNeverDestroyed.

* Source/WebCore/platform/mediastream/cocoa/AudioMediaStreamTrackRendererUnit.cpp:
(WebCore::AudioMediaStreamTrackRendererUnit::singleton):
* Source/WebCore/platform/mediastream/cocoa/AudioMediaStreamTrackRendererUnit.h:

Canonical link: https://commits.webkit.org/287207@main